update date format

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -444,8 +444,8 @@
                 onPageChanged: function(args) {
                     var searchCondition = {
                         task: $("#search-task").val(),
-                        createdDate: $("#search-createdDate").val() ? new Date($("#search-createdDate").val()).getTime() : null,
-                        updatedDate: $("#search-updatedDate").val() ? new Date($("#search-updatedDate").val()).getTime() : null,
+                        createdDate: $("#search-createdDate").val() ? new Date(moment.utc($("#search-createdDate").val()).format()).getTime() : null,
+                        updatedDate: $("#search-updatedDate").val() ? new Date(moment.utc($("#search-updatedDate").val()).format()).getTime() : null,
                         pageSize: 5,
                         pageIndex: (args.pageIndex -1)
                     }
@@ -545,8 +545,8 @@
             $("#testBtn").on("click", function(){
                 var searchCondition = {
                     task: $("#search-task").val(),
-                    createdDate: $("#search-createdDate").val() ? new Date($("#search-createdDate").val()).getTime() : null,
-                    updatedDate: $("#search-updatedDate").val() ? new Date($("#search-updatedDate").val()).getTime() : null,
+                    createdDate: $("#search-createdDate").val() ? new Date(moment.utc($("#search-createdDate").val()).format()).getTime() : null,
+                    updatedDate: $("#search-updatedDate").val() ? new Date(moment.utc($("#search-updatedDate").val()).format()).getTime() : null,
                     pageSize: 5,
                     pageIndex: 1
                 }
